WebKit/mac:

2008-08-27  Robert Kroeger  <rjkroege@liqui.org>

        Tweaked by Sam Weinig.

        Reviewed by Eric Seidel.

        Fix https://bugs.webkit.org/show_bug.cgi?id=6595
        <rdar://problem/4432150>
        Right-click does not fire mouseup event

        Adds a rightMouseUp handler to the WebHTMLView.

        The added method generates mouseup events for button 2.  The result
        is that webkit will deliver mousedown and mouseup events for button
        2 in a fashion identical to FireFox and will retain event ordering
        identical to Internet Explorer.

        Test: fast/events/mouseup-from-button2.html

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView rightMouseUp:]):

LayoutTests:

2008-08-27  Robert Kroeger  <rjkroege@liqui.org>

        Reviewed by Eric Seidel.

        Test for https://bugs.webkit.org/show_bug.cgi?id=6595

        * fast/events/mouseup-from-button2-expected.txt: Added.
        * fast/events/mouseup-from-button2.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@35956 bbb929c8-8fbe-4397-9dbb-9b2b20218538