third_party/WebKit/WebKit/mac/WebView/WebHTMLView.mm
@@ -2835,6 +2835,14 @@ static void _updateFocusedAndActiveStateTimerCallback(CFRunLoopTimerRef timer, v
     [self layoutToMinimumPageWidth:0.0f maximumPageWidth:0.0f adjustingViewSize:NO];
 }
 
+// Deliver mouseup events to the DOM for button 2.
+- (void)rightMouseUp:(NSEvent *)event
+{
+    [super rightMouseUp:event];
+    if (Frame* coreframe = core([self _frame]))
+        coreframe->eventHandler()->mouseUp(event);
+}
+
 - (NSMenu *)menuForEvent:(NSEvent *)event
 {
     [_private->compController endRevertingChange:NO moveLeft:NO];
